Wed Mar  7 21:19:15 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          When a remote participant lease expires or shuts down,
          removing its endpoints needs to unmatch any locally-matched
          endpoints.
          Cleaned-up logging.

        * tests/DCPS/Messenger/subscriber.cpp:

          Updated the WaitSet/StatusCondition usage pattern to check
          the status before waiting.

        * README:

          Updated info for upcoming release.

Wed Mar  7 16:37:11 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/StatusConditionImpl.h:

          Made virtual explicit and intialized mask to constant.

        * tests/DCPS/FooTest3_0/SubDriver.cpp:

          Added calls to participant_->contains_entity, like PubDriver already does.

        * tests/DCPS/StatusCondition/StatusConditionTest.cpp:

          Added test to verify enabled status.

Wed Mar  7 14:52:35 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Reducing some of the noise in the no coverage file reporting.

Wed Mar  7 13:55:13 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Fixing identifying files with no coverage.

Wed Mar  7 13:22:48 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/QueryCondition/QueryConditionTest.cpp:

          Removed unused variable.

Tue Mar  6 23:31:35 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DisjointSequence.cpp:
        * tests/DCPS/UnitTests/DisjointSequence.cpp:

          Fixed a bug in handling sequence number 0 combining with 1.

Tue Mar  6 20:16:10 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Maintaining old list.

Tue Mar  6 20:00:43 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/ReceivedDataElementList.h:

          Removing dead code.

        * tools/scripts/lcov.pl:
