@@ -1,3 +1,12 @@
+Thu Mar  8 15:39:18 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
+
+        * bin/PerlDDS/Process.pm:
+        * bin/PerlDDS/ProcessFactory.pm:
+        * bin/PerlDDS/Run_Test.pm:
+
+          Changing Coverage to try to capture all coverage during one test
+          run and ensure that all executables contribute to coverage.
+
 Wed Mar  7 21:19:15 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/RTPS/Sedp.cpp:
